# Inexus_3rd

./: .gitignore  .gitmodules  readme.md
3rd_build/: BUILD_x86_64.md  build.sh  stage_yaml_cpp_to_component.sh  versions.yaml
3rd_build/demo_ik/: CMakeLists.txt  demo_ik.cpp
3rd_build/demo_ik/models/arm3/: robot.urdf
3rd_build/install/aarch64/boost/include/boost/multiprecision/cpp_int/: bitwise.hpp
3rd_build/install/aarch64/boost/lib/cmake/: Boost
3rd_build/install/aarch64/boost/lib/cmake/Boost-1.83.0/: BoostConfig.cmake
3rd_build/install/aarch64/coal/include/coal/: collision_data.h  deprecated.hh  octree.h
3rd_build/install/aarch64/coal/include/hpp/fcl/: coal.hpp
3rd_build/install/aarch64/coal/lib/cmake/coal/: coalConfig.cmake  coalTargets-release.cmake
3rd_build/install/aarch64/coal/lib/cmake/hpp-fcl/: hpp-fclConfig.cmake
3rd_build/install/aarch64/coal/lib/pkgconfig/: coal.pc
3rd_build/install/aarch64/coal/share/coal/: package.xml
3rd_build/install/aarch64/console_bridge/lib/console_bridge/cmake/: console_bridge-config-version.cmake
3rd_build/install/aarch64/eigen/share/pkgconfig/: eigen3.pc
3rd_build/install/aarch64/eiquadprog/include/eiquadprog/: config.hpp  deprecated.hpp  warning.hpp
3rd_build/install/aarch64/eiquadprog/lib/cmake/eiquadprog/: eiquadprogTargets-release.cmake  eiquadprogTargets.cmake
3rd_build/install/aarch64/jsoncpp/lib/pkgconfig/: jsoncpp.pc
3rd_build/install/aarch64/pinocchio/include/pinocchio/: config.hpp
3rd_build/install/aarch64/pinocchio/include/pinocchio/algorithm/: check-data.hxx  crba.hxx  kinematics-derivatives.hxx  model.hxx
3rd_build/install/aarch64/pinocchio/include/pinocchio/bindings/python/: fwd.hpp
3rd_build/install/aarch64/pinocchio/include/pinocchio/bindings/python/multibody/: data.hpp
3rd_build/install/aarch64/pinocchio/include/pinocchio/bindings/python/parsers/: model-graph.hpp
3rd_build/install/aarch64/pinocchio/include/pinocchio/multibody/: data.hxx
3rd_build/install/aarch64/pinocchio/include/pinocchio/multibody/joint/: joint-mimic.hpp
3rd_build/install/aarch64/pinocchio/include/pinocchio/parsers/graph/: frames.hpp  fwd.hpp  geometries.hpp  graph-visitor.hpp  joints.hpp  model-configuration-converter.hpp  model-configuration-converter.hxx  model-graph-algo-geometry.hpp  model-graph-algo.hpp  model-graph.hpp
3rd_build/install/aarch64/pinocchio/include/pinocchio/parsers/urdf/: model.hxx
3rd_build/install/aarch64/pinocchio/include/pinocchio/spatial/: log.hxx
3rd_build/install/aarch64/pinocchio/lib/cmake/pinocchio/: pinocchioConfig.cmake  pinocchioTargets-release.cmake
3rd_build/install/aarch64/pinocchio/share/pinocchio/: package.xml
3rd_build/install/aarch64/placo/include/placo/dynamics/: avoid_self_collisions_constraint.h
3rd_build/install/aarch64/tinyxml2/lib/pkgconfig/: tinyxml2.pc
3rd_build/install/aarch64/urdfdom/lib/pkgconfig/: urdfdom.pc
3rd_build/install/aarch64/urdfdom/lib/urdfdom/cmake/: urdfdom-config.cmake  urdfdom-configVersion.cmake  urdfdomExport.cmake
3rd_build/install/aarch64/urdfdom_headers/lib/pkgconfig/: urdfdom_headers.pc
3rd_build/install/aarch64/yaml-cpp/lib/pkgconfig/: yaml-cpp.pc
3rd_build/test_link/: CMakeLists.txt  test_link.cpp
(+1 files in other folders)
